# pacli

./: .gitignore  CLAUDE.md  CONTEXT.md  README.md  main.py  opencode.json  progress.md  pyproject.toml  review-loop-progress.md
.agents/skills/review-loop/: SKILL.md
.agents/skills/run-loop/: SKILL.md
docs/: FRONTEND-SPEC.md  PRD.md
docs/adr/: 0001-use-textual-for-console.md  0002-define-provider-interface-via-protocols.md  0003-pluggable-sandboxing-and-safety-policy.md  0004-async-event-driven-architecture.md  0005-console-sole-seam-is-eventbus.md
pacli/: chat_chunks.py  config.py  events.py  local_sandbox.py  main.py  orchestrator.py  policy.py  provider.py  sandbox.py  summarizer.py  tool_registry.py
pacli/adapters/: lazy_openai.py  mock.py  ollama.py
pacli/console/: app.py  syntax_theme.py
pacli/prompts/: system.md
pacli/tools/: __init__.py  execute_shell.py  read_file.py
tests/: test_config.py  test_console.py  test_events.py  test_execute_shell.py  test_local_sandbox.py  test_mock_adapter.py  test_ollama_adapter.py  test_orchestrator.py  test_policy.py  test_summarizer.py
