[project]
name = "pacli"
version = "0.1.0"
description = "The out-of-this-world coding agent CLI"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "textual>=8.0.0",
    "openai>=1.0.0",
]

[project.scripts]
pacli = "pacli.main:main"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.4.0",
]
